Minor, fix a missing z-index.

--- a/webroot/rsrc/css/core/z-index.css
+++ b/webroot/rsrc/css/core/z-index.css
@@ -26,6 +26,10 @@
   z-index: 3;
 }
 
+.phabricator-nav-local {
+  z-index: 4;
+}
+
 .phabricator-nav-drag {
   z-index: 4;
 }
